@@ -78,6 +78,26 @@ class CompoundEditor( GafferUI.EditorWidget ) :
 					__set( c, scriptNode )
 								
 		__set( self.__splitContainer, scriptNode )
+	
+	## Returns all the editors that comprise this CompoundEditor, optionally
+	# filtered by type.
+	def editors( self, type = GafferUI.EditorWidget ) :
+	
+		result = []
+		def __recurse( w ) :
+			assert( isinstance( w, GafferUI.SplitContainer ) )
+			if len( w ) > 1 :
+				# it's split
+				__recurse( w[0] )
+				__recurse( w[1] )
+			else :
+				for e in w[0][:] :
+					if isinstance( e, type ) :
+						result.append( e )
+				
+		__recurse( self.__splitContainer )
+		
+		return result
 		
 	def __repr__( self ) :
 	
